--- a/2.html
+++ b/2.html
@@ -33,6 +33,18 @@
             <a href="https://discord.gg/uFsPxgWTAK" class="btn">Discord Server</a>
         </div>
     </header>
-    
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/60055ea8c31c9117cb6fb5dc/1esafjh11';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 </html>
