--- a/index.html
+++ b/index.html
@@ -31,22 +31,9 @@
 
         <div class="button">
             <a href="https://www.youtube.com/channel/UCESI_nOJOVfImjwdc0Mq1Kw" class="btn">WATCH VIDEO</a>
-            <a href="#" class="btn">LEARN MORE</a>
+            <a href="learn.html" class="btn">LEARN MORE</a>
         </div>
     </header>
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/60055ea8c31c9117cb6fb5dc/1esafjh11';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
     
 </body>
 </html>
