--- a/learn.html
+++ b/learn.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="main">
+
+        <div class="bgs">
             <ul>
                 <li><a href="4.html">Contact</a></li>
             </ul>
@@ -31,7 +31,7 @@
         <div class="text">
             <p>If you wanna learn how to make a website free i suggest you to check out my YouTube channel on YouTube so you might learn how to make a website for free and like how to host your website for 24/7 online and its free or something. So if you wanna check out my channel just press the button beside this text :D</p>
         </div>
-    </header>
+
 
     <div class="button">
         <a href="https://www.youtube.com/channel/UCESI_nOJOVfImjwdc0Mq1Kw" class="btn">WATCH VIDEO</a>
